# testing-library

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml  release.yml  website.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/contributing/: setup.md
book/src/core/: README.md
book/src/core/advanced/: README.md  accessibility.md  configuration-options.md
book/src/core/queries/: README.md  about-queries.md  by-alt-text.md  by-display-value.md  by-label-text.md  by-placeholder-text.md  by-role.md  by-test-id.md  by-text.md  by-title.md
book/src/core/user-actions/: README.md  firing-events.md
book/src/frameworks/: README.md  dom.md
book/src/frameworks/dom/: README.md  api.md  install.md
book/theme/: tabs.js  theme.js
