[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/testing-library"
version = "0.0.1"

[workspace.dependencies]
log = "0.4.22"
regex = "1.10.6"
thiserror = "2.0.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"
